[date-picker, feedback-form, textarea] fixed displaying in dark mode

--- a/semcore/textarea/src/style/textarea.shadow.css
+++ b/semcore/textarea/src/style/textarea.shadow.css
@@ -8,6 +8,7 @@ STextarea {
   box-sizing: border-box;
   font-family: inherit;
   resize: var(--resize);
+  background-color: transparent;
 
   &:read-only {
     background-color: var(--intergalactic-bg-secondary-neutral, #f4f5f9);
